<resources>
    <string name="app_name">Frugal</string>
    <string name="aguarde">aguarde</string>
    <string name="splash_icon">FRUGAL</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="est_completando_o_tanque">Está completando o tanque?</string>
    <string name="preco_l">Preco(L)</string>
    <string name="valor_total">Valor Total</string>
    <string name="litros">Litros</string>
    <string name="posto_de_combust_vel">Posto de combustível</string>
    <string name="abastecimento_anterior_em_falta">Abastecimento anterior em falta?</string>
    <string name="observacoes">Observacao</string>

</resources>
