<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deyvi.frugalcombustive.ui.fragments.FragmentAddCombustivel"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/edtData"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Data"
        tools:ignore="MissingConstraints"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtHora"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Hora"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPreco"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/preco_l"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtValorTotal"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/valor_total"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="81dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtLitros"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/litros"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="81dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkPosto"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/est_completando_o_tanque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="141dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/posto_de_combust_vel"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="191dp" />

    <CheckBox
        android:id="@+id/checkAbast"
        android:layout_width="353dp"
        android:layout_height="33dp"
        android:text="@string/abastecimento_anterior_em_falta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/edtObservacoes"
        android:layout_width="349dp"
        android:layout_height="160dp"
        android:ems="10"
        android:hint="@string/observacoes"
        android:inputType="textMultiLine"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="304dp" />

</android.support.constraint.ConstraintLayout>
